# lavg

./: CMakeLists.txt  avg.cpp  readme.md  utils.cpp  utils.h
docker/: Dockerfile
src/: Http.cpp  Http.h  utils.cpp  utils.h
